--- a/manage/index.html
+++ b/manage/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A simple routine planner.">
-    <title>Routines | My Routines</title>
+    <title>Routines | Manage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⏳</text></svg>">
 
     <!-- Custom styles for this template -->
-    <link href="css/routines.css" rel="stylesheet">
+    <link href="/routines/css/routines.css" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">⏳ Routines</a>
+                <a class="navbar-brand" href="/routines">⏳ Routines</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,10 +32,10 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" aria-current="page" href="/routines">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/routines.html">My Routines</a>
+                            <a class="nav-link active" href="/routines/manage">My Routines</a>
                         </li>
                         <!--
                         <li class="nav-item">
@@ -54,55 +54,24 @@
         </nav>
     </header>
 
-    <main class="flex-grow-1 flex-shrink-1 container-fluid">
-        <div class="row">
+    <main class="container mt-5">
 
-            <!-- ScrollSpy Content-->
-            <section class="habits col d-flex flex-column align-items-center position-relative overflow-scroll p-3"
-                id="habit-scroller" tabindex="0" style="height: calc(100vh - 60px - 4.5em);">
-                <template id="template-habit">
-                    <div class="card mb-3" id="{{uid}}">
-                        <div class="row g-0">
-                            <div class="col-3 p-2 text-center">
-                                <span class="activity-icon">{{icon}}</span>
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{name}}</h5>
-                                    <p class="card-text">{{description}}</p>
-                                    <p class="card-text"><small class="text-muted">Estimated time: {{time}}
-                                            minutes</small></p>
-                                </div>
-                            </div>
-                            <div class="add-to-routine col-1 p-2 d-flex align-items-center justify-content-center"
-                                style="background-color: #e9ecef; cursor: pointer;">
-                                <span class="fs-3 text-muted" title="Add habit to routine">></span>
-                            </div>
-                        </div>
-                    </div>
-                </template>
-            </section>
-
-            <!-- Sidebar -->
-            <aside class="sidebar col-auto d-flex flex-column px-0 px-sm-2 bg-white border-start">
-                <select id="routine-select" class="form-select form-select-lg mb-1 border-bottom"
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5 text-center">
+                <h1 class="display-5 fw-bold">Select Routine</h1>
+                <p>Select existing routine to edit or create a new one</p>
+                <select id="routine-select" class="form-select form-select-lg mb-3 border-bottom"
                     aria-label=".form-select-lg">
-                    <option selected>Choose Routine to Edit</option>
+                    <option value="create-new" selected>Create new routine</option>
                     <template id="template-routine-option">
-                        <option value="{{name}}">{{name}}</option>
+                        <option value="{{uid}}">{{name}}</option>
                     </template>
                 </select>
 
-                <div id="habit-list" class="list-group list-group-flush border-bottom scrollarea">
-                    <template id="template-habit-list-item">
-                        <a class="list-group-item list-group-item-action px-1 px-sm-3">{{icon}}
-                            {{name}}</a>
-                    </template>
-                </div>
-
-            </aside>
-
+                <button class="btn btn-primary btn-lg mt-3" id="continue" type="button">Continue</button>
+            </div>
         </div>
+
     </main>
 
     <footer class="footer mt-auto py-3 bg-light">
@@ -116,7 +85,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="js/my-routines.js"></script>
+    <script type="module" src="/routines/js/manage.js"></script>
 </body>
 
 </html>
