--- a/manage/edit/index.html
+++ b/manage/edit/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">⏳ Routines</a>
+                <a class="navbar-brand" href="/routines">⏳ Routines</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -57,48 +57,18 @@
         <div class="row">
 
             <!-- ScrollSpy Content-->
-            <section class="habits col d-flex flex-column align-items-center position-relative overflow-scroll p-3"
-                id="habit-scroller" tabindex="0" style="height: calc(100vh - 60px - 4.5em);">
-                <template id="template-habit">
-                    <div class="card mb-3" id="{{uid}}">
-                        <div class="row g-0">
-                            <div class="col-3 p-2 text-center">
-                                <span class="activity-icon">{{icon}}</span>
-                            </div>
-                            <div class="col-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{name}}</h5>
-                                    <p class="card-text">{{description}}</p>
-                                    <p class="card-text"><small class="text-muted">Estimated time: {{time}}
-                                            minutes</small></p>
-                                </div>
-                            </div>
-                            <div class="add-to-routine col-1 p-2 d-flex align-items-center justify-content-center"
-                                style="background-color: #e9ecef; cursor: pointer;">
-                                <span class="fs-3 text-muted" title="Add habit to routine">></span>
-                            </div>
-                        </div>
-                    </div>
-                </template>
+            <section id="habit-scroller"
+                class="habits add-habits col d-flex flex-column align-items-center position-relative overflow-scroll p-3"
+                tabindex="0" style="height: calc(100vh - 60px - 4.5em);">
             </section>
 
             <!-- Sidebar -->
-            <aside class="sidebar col-auto d-flex flex-column px-0 px-sm-2 bg-white border-start">
-
+            <aside
+                class="sidebar remove-habits reorder-habits col-auto d-flex flex-column px-0 px-sm-2 bg-white border-start">
                 <div class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
                     <span id="routine-name" class="fs-5 fw-semibold"></span>
                 </div>
-
-                <div id="habit-list" class="list-group list-group-flush border-bottom scrollarea">
-                </div>
-                <template id="template-habit-list-item">
-                    <span class="list-group-item px-1 px-sm-3">
-                        {{icon}} &nbsp; {{name}} &nbsp;
-                        <button type="button"
-                            class="remove-from-routine btn btn-sm btn-outline-danger float-end px-1 py-0">X</button>
-                    </span>
-                </template>
-
+                <div id="habit-list" class="list-group list-group-flush border-bottom scrollarea"></div>
             </aside>
 
         </div>
@@ -115,7 +85,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="/routines/js/edit-routine.js"></script>
+    <script type="module" src="/routines/js/manage-edit.js"></script>
 </body>
 
 </html>
