--- a/manage/index.html
+++ b/manage/index.html
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/routines/manage">My Routines</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/routines/habits">My Habits</a>
+                        </li>
                         <!--
                         <li class="nav-item">
                             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
