--- a/habits/index.html
+++ b/habits/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A simple routine planner.">
-    <title>Routines | Home</title>
+    <title>Routines | Habits</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⏳</text></svg>">
 
     <!-- Custom styles for this template -->
-    <link href="css/routines.css" rel="stylesheet">
+    <link href="/routines/css/routines.css" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -32,13 +32,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/routines">Home</a>
+                            <a class="nav-link" aria-current="page" href="/routines">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/routines/manage">My Routines</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/routines/habits">My Habits</a>
+                            <a class="nav-link active" href="/routines/habits">My Habits</a>
                         </li>
                         <!--
                         <li class="nav-item">
@@ -69,10 +69,12 @@
                 <div class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
                     <span class="fs-5 fw-semibold">All Habits</span>
                 </div>
-                <div id="habit-scroller-list" class="list-group list-group-flush border-bottom scrollarea"></div>
+                <button type="button" class="create-new-habit btn btn-outline-primary btn-sm m-2">Create</button>
+                <div id="habit-scroller-list"
+                    class="delete-habits list-group list-group-flush border-top border-bottom"></div>
             </aside>
 
-            <!-- Cards -->
+            <!-- Cards-->
             <section id="habit-scroller"
                 class="habits col d-flex flex-column align-items-center position-relative overflow-scroll p-3"
                 style="height: calc(100vh - 60px - 4.5em);"></section>
@@ -91,7 +93,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/routines/js/new-habit.js"></script>
+    <script type="module" src="/routines/js/habits.js"></script>
 </body>
 
 </html>
