Perform much refactoring of JS and add live browser reloading in dev

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
                     <span class="fs-5 fw-semibold">All Habits</span>
                 </div>
-                <div id="habit-scroller-list" class="list-group list-group-flush border-bottom scrollarea"></div>
+                <div id="all-habits-list" class="list-group list-group-flush border-bottom scrollarea"></div>
             </aside>
 
             <!-- Cards -->
@@ -91,7 +91,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/pages/home.js"></script>
 </body>
 
 </html>
