--- a/manage/edit/index.html
+++ b/manage/edit/index.html
@@ -63,7 +63,7 @@
             <section class=" col d-flex flex-column px-2 h-100 border-end">
                 <h4 class="text-center text-nowrap p-3 border-bottom">All Habits</h4>
                 <button type="button" class="create-new-habit btn btn-outline-primary btn-sm m-2">Create</button>
-                <div id="all-habits"
+                <div id="all-habits-list"
                     class="habit-list delete-habits add-habits overflow-scroll list-group list-group-flush border-bottom">
                 </div>
             </section>
@@ -90,8 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="/routines/js/new-habit.js"></script>
-    <script type="module" src="/routines/js/manage-edit.js"></script>
+    <script type="module" src="/routines/js/pages/routine.js"></script>
 </body>
 
 </html>
