--- a/habits/index.html
+++ b/habits/index.html
@@ -70,8 +70,8 @@
                     <span class="fs-5 fw-semibold">All Habits</span>
                 </div>
                 <button type="button" class="create-new-habit btn btn-outline-primary btn-sm m-2">Create</button>
-                <div id="habit-scroller-list"
-                    class="delete-habits list-group list-group-flush border-top border-bottom"></div>
+                <div id="all-habits-list" class="delete-habits list-group list-group-flush border-top border-bottom">
+                </div>
             </aside>
 
             <!-- Cards-->
@@ -93,8 +93,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="/routines/js/new-habit.js"></script>
-    <script type="module" src="/routines/js/habits.js"></script>
+    <script type="module" src="/routines/js/pages/habits.js"></script>
 </body>
 
 </html>
