--- a/manage/index.html
+++ b/manage/index.html
@@ -88,7 +88,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="/routines/js/manage.js"></script>
+    <script type="module" src="/routines/js/views/routines-view.js"></script>
 </body>
 
 </html>
