--- a/edit/index.html
+++ b/edit/index.html
@@ -30,28 +30,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/routines">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/routines/manage">My Routines</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/routines/habits">My Habits</a>
-                        </li>
-                        <!--
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
-                        -->
-                    </ul>
-                    <!--
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                    -->
+
+                    <template id="nav-link-template">
+                        <li class="nav-item"><a class="nav-link {{active}}" href="{{destination}}">{{title}}</a></li>
+                    </template>
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0"></ul>
+                    <script type="module" src="/routines/js/navigation.js"></script>
+
                 </div>
             </div>
         </nav>
@@ -78,7 +63,6 @@
 
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <p class="float-end"><a href="#">Back to top</a></p>
             <p class="text-muted">&copy; 2021 Rollcloud &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
             </p>
         </div>
@@ -87,7 +71,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script type="module" src="/routines/js/views/routines-view.js"></script>
+    <script type="module" src="/routines/js/pages/routines.js"></script>
 </body>
 
 </html>
