Improve responsive rendering of routines

--- a/edit/routine/index.html
+++ b/edit/routine/index.html
@@ -47,18 +47,18 @@
 
             <!-- All habits-->
             <section class=" col d-flex flex-column px-2 h-100 border-end">
-                <h4 class="text-center text-nowrap p-3 border-bottom">All Habits</h4>
-                <button type="button" class="create-new-habit btn btn-outline-primary btn-sm m-2">Create</button>
+                <h4 class="text-center text-nowrap p-3 mb-0">All Habits</h4>
+                <button type="button" class="create-new-habit btn btn-outline-primary btn-sm m-2 mt-0">Create</button>
                 <div id="all-habits-list"
-                    class="habit-list delete-habits add-habits overflow-scroll list-group list-group-flush border-bottom">
+                    class="habit-list delete-habits add-habits overflow-scroll list-group list-group-flush border-top border-bottom">
                 </div>
             </section>
 
             <!-- Routine habits -->
             <section class="col d-flex flex-column px-2 h-100 border-start">
-                <h4 id="routine-name" class="text-center text-nowrap p-3 border-bottom"></h4>
-                <div id="routine-habits"
-                    class="habit-list remove-habits reorder-habits overflow-scroll list-group list-group-flush border-bottom">
+                <h4 class="text-center text-nowrap p-3 border-bottom routine-name"></h4>
+                <div
+                    class="routine-habits habit-list remove-habits reorder-habits overflow-scroll list-group list-group-flush border-bottom">
                 </div>
             </section>
 
