--- a/start/routine/index.html
+++ b/start/routine/index.html
@@ -42,30 +42,47 @@
         </nav>
     </header>
 
-    <main class="flex-grow-1 flex-shrink-1 container-fluid">
-        <div class="row">
+    <main class="flex-grow-1 flex-shrink-1 d-flex">
 
-            <!-- Routine habits -->
-            <section class="sidebar col-auto d-flex flex-column px-2 h-100 border-end">
-                <h4 id="routine-name" class="text-center text-nowrap p-3 border-bottom"></h4>
-                <div id="routine-habits" class="habit-list overflow-scroll list-group list-group-flush border-bottom">
+        <!-- Offcanvas Habit List -->
+        <div class="offcanvas offcanvas-bottom" data-bs-scroll="true" tabindex="-1" id="offcanvasHabitList"
+            aria-labelledby="offcanvasHabitListLabel">
+            <div class="offcanvas-header">
+                <h5 class="routine-name offcanvas-title"></h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <div
+                    class="routine-habits habit-list overflow-scroll list-group list-group-flush border-top border-bottom">
                 </div>
-            </section>
-
-            <!-- Cards -->
-            <section id="routine-habits-scroller"
-                class="habits col d-flex flex-column align-items-center position-relative overflow-scroll p-3"
-                style="height: calc(100vh - 60px - 4.5em);">
-            </section>
-
+            </div>
         </div>
+
+        <!-- Sidebar Habit List -->
+        <section class="sidebar col-auto d-none d-sm-flex flex-column px-2 h-100 border-end">
+            <h4 class="routine-name text-center text-nowrap p-3 border-bottom"></h4>
+            <div class="routine-habits habit-list overflow-scroll list-group list-group-flush border-bottom">
+            </div>
+        </section>
+
+        <!-- Cards -->
+        <section id="routine-habits-scroller"
+            class="habits col d-flex flex-column align-items-center position-relative overflow-scroll p-3 mb-5 mb-sm-0">
+        </section>
+
     </main>
 
-    <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-            <p class="text-muted">&copy; 2021 Rollcloud &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
-            </p>
-        </div>
+    <footer class="fixed-bottom d-sm-none d-flex flex-column p-2 bg-light">
+        <!-- Offcanvas button -->
+        <a class="touch-icon text-center text-muted link-secondary text-decoration-none" data-bs-toggle="offcanvas"
+            href="#offcanvasHabitList" role="button" aria-controls="offcanvasHabitList">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="1em" height="1em" fill="currentColor">
+                <path fill-rule="evenodd"
+                    d="M18.78 15.28a.75.75 0 000-1.06l-6.25-6.25a.75.75 0 00-1.06 0l-6.25 6.25a.75.75 0 101.06 1.06L12 9.56l5.72 5.72a.75.75 0 001.06 0z">
+                </path>
+            </svg>
+        </a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
