--- a/index.html
+++ b/index.html
@@ -61,9 +61,25 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#777" />
+
+                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" width="100%" height="100%"
+                        viewBox="0 0 1440 560">
+                        <g fill="none" mask="url(&quot;#a&quot;)">
+                            <path fill="#0b3772" d="M0 0h1440v560H0z" />
+                            <path fill="#182f5d"
+                                d="M1488 560H0V278.1q51.29-68.71 120-17.42 92.26-27.74 120 64.52 38.24-81.76 120-43.53 49.66-22.34 72 27.31 51.71-68.29 120-16.58 14.38-57.62 72-43.23 67.21-52.79 120 14.42 46.11-25.9 72 20.21 52.71-19.29 72 33.42 70.96-49.04 120 21.92 26.96-93.04 120-66.08 79.16-40.83 120 38.33 72.82-47.18 120 25.64 27.58-92.42 120-64.84z" />
+                            <path fill="#25467d"
+                                d="M1512 560H0V341.82q103.8-16.19 120 87.61 23.5-96.5 120-73.01 46.4-25.6 72 20.8 49.15-22.84 72 26.31 3.08-68.92 72-65.84 54.85-65.15 120-10.29 53.96-18.04 72 35.91 52.28-19.72 72 32.56 45.29-26.71 72 18.58 5.96-66.04 72-60.08 50.92-69.08 120-18.16 56.88-15.11 72 41.77 74.91-45.09 120 29.83 47.2-24.8 72 22.41.57-71.43 72-70.87 42.35-77.65 120-35.3 42.54-29.46 72 13.07z" />
+                            <path fill="#356cb1"
+                                d="M1488 560H0V415.67q46.64-25.36 72 21.29 56.83-15.17 72 41.67 44.49-27.51 72 16.98 2.84-69.16 72-66.32 21.89-50.11 72-28.22 66.18-53.82 120 12.35 65.91-6.08 72 59.83 41.89-30.11 72 11.79 3.44-68.56 72-65.12 30.01-41.99 72-11.98 100.51-19.49 120 81.02 42.44-77.56 120-35.12 50.43-69.57 120-19.13 93.88-26.12 120 67.76 53.62-66.38 120-12.76 34.54-85.46 120-50.93z" />
+                            <path fill="rgba(122, 169, 232, 1)"
+                                d="M1464 560H0v-32.73q91.14-28.86 120 62.28 49.69-70.31 120-20.62 22.39-97.61 120-75.22 76.02-43.98 120 32.04 91.54-28.46 120 63.07 35.94-84.06 120-48.13 44.74-75.26 120-30.53 43.97-28.03 72 15.95 47.49-24.51 72 22.97 45.76-26.23 72 19.53 15.33-56.67 72-41.34 45.64-26.36 72 19.29 7.41-64.59 72-57.18 41.38-30.62 72 10.77 76.88-43.12 120 33.77z" />
+                        </g>
+                        <defs>
+                            <mask id="a">
+                                <path fill="#ffffff" width="100%" height="100%" d="M0 0h1440v560H0z" />
+                            </mask>
+                        </defs>
                     </svg>
 
                     <div class="container">
@@ -75,9 +91,24 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#777" />
+                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" width="100%" height="100%"
+                        viewBox="0 0 1440 560">
+                        <g fill="none" mask="url(&quot;#a&quot;)">
+                            <path fill="#0b3772" d="M0 0h1440v560H0z" />
+                            <path stroke="rgba(51, 121, 194, 0.58)" stroke-width="2"
+                                d="M-308.865625 246c71.995625 17 215.995625 93 360 85 143.995625-8 215.995625-142.4 360-125 143.995625 17.4 215.995625 212 360 212 143.995625 0 215.995625-205.4 360-212 143.995625-6.6 298.225625 204 360 179C1552.91 360 1450.23 141.8 1440 81" />
+                            <path stroke="rgba(51, 121, 194, 0.58)" stroke-width="2"
+                                d="M-710.707552 191c71.997552 34.4 215.997552 178.6 360 172 143.997552-6.6 215.997552-195.2 360-205 143.997552-9.8 215.997552 152.8 360 156 143.997552 3.2 215.997552-138.6 360-140 143.997552-1.4 217.857552 158 360 133C1231.43 282 1369.86 100.6 1440 49" />
+                            <path stroke="rgba(51, 121, 194, 0.58)" stroke-width="2"
+                                d="M-373.385185 462c71.995185-52 215.995185-236.2 360-260 143.995185-23.8 215.995185 138.2 360 141 143.995185 2.8 215.995185-156 360-127 143.995185 29 215.995185 270.6 360 272 143.995185 1.4 285.325185-266.2 360-265C1501.29 224.2 1437.32 439.8 1440 494" />
+                            <path stroke="rgba(51, 121, 194, 0.58)" stroke-width="2"
+                                d="M-238.101476 510C-166.1 447.6-22.1 234.2 121.898524 198 265.9 161.8 337.9 321.2 481.898524 329c144.001476 7.8 216.001476-110.8 360-92 144.001476 18.8 216.001476 210.2 360 186 144.001476-24.2 312.381476-309 360-307C1609.52 118 1464.38 369.6 1440 433" />
+                        </g>
+                        <defs>
+                            <mask id="a">
+                                <path fill="#ffffff" width="100%" height="100%" d="M0 0h1440v560H0z" />
+                            </mask>
+                        </defs>
                     </svg>
 
                     <div class="container">
@@ -89,9 +120,110 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <rect width="100%" height="100%" fill="#777" />
+
+                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" width="100%" height="100%"
+                        viewBox="0 0 1440 560">
+                        <g fill="none" mask="url(&quot;#a&quot;)">
+                            <path fill="url(#b)" d="M0 0h1440v560H0z" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="10" d="M915 239 914-2"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="8" d="m272 456-1-196"
+                                class="Up" />
+                            <path stroke="url(#e)" stroke-linecap="round" stroke-width="6" d="m1115 296-1-297"
+                                class="Up" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="6" d="m1422 46-1-324"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="8" d="m1098 29-1 341"
+                                class="Down" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="10" d="m1113 12-1 298"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="8" d="m1265 303-1-203"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="10" d="m1246 167-1-256"
+                                class="Up" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="6" d="m155 559-1 285"
+                                class="Up" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="6" d="m792 30-1-267"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="8" d="m424 222-1-273"
+                                class="Down" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="10" d="m1259 164-1-141"
+                                class="Down" />
+                            <path stroke="url(#e)" stroke-linecap="round" stroke-width="6" d="m1184 139-1 163"
+                                class="Up" />
+                            <path stroke="url(#e)" stroke-linecap="round" stroke-width="8" d="m1429 104-1 328"
+                                class="Up" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="10" d="m1295 57-1-214"
+                                class="Down" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="10" d="m640 335-1-175"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="8" d="m241 482-1-407"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="10" d="m181 446-1-336"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="10" d="m1318 301-1 234"
+                                class="Up" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="10" d="m504 1-1 222"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="8" d="m1381 363-1-220"
+                                class="Up" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="10" d="m820 404-1 357"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="10" d="M91 247 90 47"
+                                class="Up" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="10" d="m176 495-1 403"
+                                class="Down" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="8" d="m316 186-1-238"
+                                class="Down" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="6" d="m101 111-1-158"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="10" d="m938 550-1 289"
+                                class="Up" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="6" d="m808 374-1-354"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="8" d="m276 14-1-261"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="6" d="m215 260-1-169"
+                                class="Up" />
+                            <path stroke="url(#e)" stroke-linecap="round" stroke-width="8" d="m1042 324-1 207"
+                                class="Up" />
+                            <path stroke="url(#c)" stroke-linecap="round" stroke-width="10" d="m356 353-1-160"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="10" d="m1002 115-1-158"
+                                class="Down" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="6" d="m917 7-1 250"
+                                class="Down" />
+                            <path stroke="url(#d)" stroke-linecap="round" stroke-width="6" d="m570 520-1 390"
+                                class="Up" />
+                            <path stroke="url(#f)" stroke-linecap="round" stroke-width="10" d="m1040 514-1-348"
+                                class="Down" />
+                        </g>
+                        <defs>
+                            <linearGradient id="b" x1="15.28%" x2="84.72%" y1="-39.29%" y2="139.29%"
+                                gradientUnits="userSpaceOnUse">
+                                <stop offset="0" stop-color="#0e2a47" />
+                                <stop offset="1" stop-color="#00459e" />
+                            </linearGradient>
+                            <linearGradient id="c" x1="0%" x2="0%" y1="0%" y2="100%">
+                                <stop offset="0" stop-color="rgba(28, 83, 142, 0)" />
+                                <stop offset="1" stop-color="#1c538e" />
+                            </linearGradient>
+                            <linearGradient id="d" x1="0%" x2="0%" y1="100%" y2="0%">
+                                <stop offset="0" stop-color="rgba(90, 131, 199, 0)" />
+                                <stop offset="1" stop-color="rgba(90, 131, 199, 1)" />
+                            </linearGradient>
+                            <linearGradient id="e" x1="0%" x2="0%" y1="100%" y2="0%">
+                                <stop offset="0" stop-color="rgba(28, 83, 142, 0)" />
+                                <stop offset="1" stop-color="#1c538e" />
+                            </linearGradient>
+                            <linearGradient id="f" x1="0%" x2="0%" y1="0%" y2="100%">
+                                <stop offset="0" stop-color="rgba(90, 131, 199, 0)" />
+                                <stop offset="1" stop-color="rgba(90, 131, 199, 1)" />
+                            </linearGradient>
+                            <mask id="a">
+                                <path fill="#ffffff" width="100%" height="100%" d="M0 0h1440v560H0z" />
+                            </mask>
+                        </defs>
                     </svg>
 
                     <div class="container">
