Add inspiration text to homepage carousel

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Add some routines.</h1>
-                            <p>Some representative placeholder content for the first slide of the carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                            <p>We've included some simple ones to get you started.</p>
+                            <p><a class="btn btn-lg btn-primary" href="/routines/edit/">Add routines</a></p>
                         </div>
                     </div>
                 </div>
@@ -114,8 +114,8 @@
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Rearrange them as necessary.</h1>
-                            <p>Some representative placeholder content for the second slide of the carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                            <p>Need to brush your teeth <i>after</i> breakfast? No problem!</p>
+                            <p><a class="btn btn-lg btn-primary" href="/routines/edit/habits/">Show habits</a></p>
                         </div>
                     </div>
                 </div>
@@ -229,8 +229,8 @@
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>Meet your goals.</h1>
-                            <p>Some representative placeholder content for the third slide of this carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                            <p>Practise makes perfect - and now it's easy...</p>
+                            <p><a class="btn btn-lg btn-primary" href="/routines/start/">Get started</a></p>
                         </div>
                     </div>
                 </div>
