--- a/edit/index.html
+++ b/edit/index.html
@@ -46,16 +46,9 @@
 
         <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5 text-center">
-                <h1 class="display-5 fw-bold">Select Routine</h1>
-                <p>Select existing routine to edit or create a new one</p>
-                <select id="routine-select" class="form-select form-select-lg mb-3 border-bottom"
-                    aria-label=".form-select-lg">
-                    <option value="" selected>Select an option</option>
-                    <option value="create-new">Create new routine</option>
-                    <template id="template-routine-option">
-                        <option value="{{uid}}">{{name}}</option>
-                    </template>
-                </select>
+                <h1 class="display-5 fw-bold">Edit Routine</h1>
+                <p>Select an existing routine to edit or create a new one</p>
+                <div class="routine-cards d-flex flex-wrap justify-content-center"></div>
             </div>
         </div>
 
