Include manual trigger to add default data

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                         <div class="carousel-caption">
                             <h1>Add some routines.</h1>
                             <p>We've included some simple ones to get you started.</p>
-                            <p><a class="btn btn-lg btn-primary" href="/routines/edit/">Add routines</a></p>
+                            <p><a class="btn btn-lg btn-primary" href="#" id="add-default-routines-btn">Add routines</a>
+                            </p>
                         </div>
                     </div>
                 </div>
