Only show new routine button on routine edit page

--- a/edit/index.html
+++ b/edit/index.html
@@ -48,7 +48,7 @@
             <div class="container-fluid py-5 text-center">
                 <h1 class="display-5 fw-bold">Edit Routine</h1>
                 <p>Select an existing routine to edit or create a new one</p>
-                <div class="routine-cards d-flex flex-wrap justify-content-center"></div>
+                <div class="routine-cards new-routine d-flex flex-wrap justify-content-center"></div>
             </div>
         </div>
 
