Tidy up home page CSS

--- a/start/routine/index.html
+++ b/start/routine/index.html
@@ -42,7 +42,7 @@
         </nav>
     </header>
 
-    <main class="flex-grow-1 flex-shrink-1 d-flex">
+    <main class="flex-grow-1 flex-shrink-1 d-flex overflow-hidden">
 
         <!-- Offcanvas Habit List -->
         <div class="offcanvas offcanvas-bottom" data-bs-scroll="true" tabindex="-1" id="offcanvasHabitList"
