Add most habit editing functionality

--- a/edit/habits/index.html
+++ b/edit/habits/index.html
@@ -51,7 +51,7 @@
                     <span class="fs-5 fw-semibold">All Habits</span>
                 </div>
                 <button type="button" class="create-new-habit btn btn-outline-primary btn-sm m-2">Create</button>
-                <div id="all-habits-list" class="delete-habits list-group list-group-flush border-top border-bottom">
+                <div id="all-habits-list" class="delete-habits edit-habits list-group list-group-flush border-top border-bottom">
                 </div>
             </aside>
 
